# gh-log

./: .mergify.yml  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix  input.txt
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  release.yml
docs/: comments.md
src/: cache.rs  config.rs  data.rs  github.rs  input.rs  main.rs  view.rs
src/snapshots/: gh_log__cache__tests__corrupted_cache_file_returns_error.snap  gh_log__cache__tests__save_and_load.snap  gh_log__cache__tests__save_fails_with_too_many_prs.snap  gh_log__config__tests__validate_invalid_exclude_pattern.snap  gh_log__config__tests__validate_invalid_ignore_pattern.snap
tests/: cli_tests.rs
tests/snapshots/: cli_tests__bash_completion.snap  cli_tests__cli_help.snap  cli_tests__cli_help.snap.new  cli_tests__cli_help_short_flag.snap  cli_tests__cli_help_short_flag.snap.new  cli_tests__completions_help.snap  cli_tests__completions_invalid_shell.snap  cli_tests__fish_completion.snap  cli_tests__missing_subcommand.snap  cli_tests__missing_subcommand.snap.new  cli_tests__powershell_completion.snap  cli_tests__print_help.snap  cli_tests__print_help.snap.new  cli_tests__print_invalid_date_format.snap  cli_tests__print_missing_month_argument.snap  cli_tests__view_help.snap  cli_tests__view_help.snap.new  cli_tests__view_invalid_date_format_extra_chars.snap  cli_tests__view_invalid_date_format_no_dash.snap  cli_tests__view_invalid_date_format_wrong_month.snap  cli_tests__view_invalid_date_format_wrong_year.snap  cli_tests__view_missing_month_argument.snap  cli_tests__zsh_completion.snap
