[package]
name = "gh-log"
version = "0.1.6"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.27"
crossterm = "0.28"
clap = { version = "4.5.54", features = ["derive"] }
regex = "1.12.2"
anyhow = "1.0.100"
insta = "1.46.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
proptest = "1.9"
