[package]
name = "gh-log"
version = "0.1.20"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5"
regex = "1.12.2"
anyhow = "1.0.100"
directories = "6.0"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
proptest = "1.9"
insta = "1.46.1"
tempfile = "3.0"
